# Cropguard

./: README.md
siacen-AE.CAP.1.1/backend/: .gitignore  fix2.py  fix_all.py  fix_analyze.py  fix_analyze3.py  fix_analyze6.py  fix_graph_diag.py  pyproject.toml
siacen-AE.CAP.1.1/backend/agent/: consistency_checker.py  edges.py  feedback_loop.py  nodes.py  state.py
siacen-AE.CAP.1.1/backend/auth/: middleware.py
siacen-AE.CAP.1.1/backend/config/: __init__.py
siacen-AE.CAP.1.1/backend/database/: supabase_client.py
siacen-AE.CAP.1.1/backend/llm/: anthropic_client.py  openai_client.py
siacen-AE.CAP.1.1/backend/memory/: short_term.py
siacen-AE.CAP.1.1/backend/models/: __init__.py  feedback.py  requests.py  sources.py
siacen-AE.CAP.1.1/backend/observability/: __init__.py
siacen-AE.CAP.1.1/backend/plugins/: registry.py
siacen-AE.CAP.1.1/backend/prompts/: __init__.py
siacen-AE.CAP.1.1/backend/prompts/templates/agent/: crop_identification.j2  treatment.j2  (+2 more)
siacen-AE.CAP.1.1/backend/rag/: pipeline.py
siacen-AE.CAP.1.1/backend/rag/preprocessing/: cleaner.py
siacen-AE.CAP.1.1/backend/rag/retrieval/: __init__.py  evaluator.py  fallback.py  retriever.py
siacen-AE.CAP.1.1/backend/rag/vectorstore/: __init__.py  collections.py  embeddings.py
siacen-AE.CAP.1.1/backend/routes/: feedback.py
siacen-AE.CAP.1.1/backend/scripts/: evaluate_retrieval.py
siacen-AE.CAP.1.1/backend/tests/: __init__.py  test_agent.py  test_preprocessing.py
siacen-AE.CAP.1.1/backend/tools/: __init__.py  disease_lookup.py  vision.py
siacen-AE.CAP.1.1/backend/utils/: image.py
(+93 files in other folders)
