[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "chromadb>=1.5.7",
    "fastapi>=0.135.3",
    "jinja2>=3.1.6",
    "langgraph>=1.1.8",
    "openai>=2.31.0",
    "pdfplumber>=0.11.9",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "slowapi>=0.1.9",
    "supabase>=2.28.3",
    "uvicorn>=0.44.0",
]
